Add project starter files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SER334_assignment3 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(SER334_assignment3 HakobyanImageProcessor.c BMPHandler.h Image.h BMPHandler.c Image.c)
+add_executable(SER334_assignment3 src/HakobyanImageProcessor.c headers/BMPHandler.h headers/Image.h src/BMPHandler.c src/Image.c src/BaseFilters.c)
